# verse-mcp

./: .gitignore  README.md  pyproject.toml
src/verse_mcp/: server.py
src/verse_mcp/data/: verse_digest.md
